[package]
name = "task-compass"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4.8.0"
zbus = "3.14.1"
serde_json = "1.0.96"
serde = { version = "1.0.162", features = ["derive"] }
chrono = "0.4.26"
clap = { version = "4.4.6", features = ["derive"] }
prettytable-rs = "0.10.0"
indexmap = "2.0.2"